re PR c++/37087 (Segfault on compiling template defined in wrong namespace.)

/cp
2008-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/37087
	* parser.c (cp_parser_class_head): Early return error_mark_node in
	case of global qualification of class name or qualified name that
	does not name a class.

/testsuite
2008-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/37087
	* g++.dg/template/crash80.C: New.
	* g++.old-deja/g++.other/decl5.C: Adjust.

From-SVN: r139034